# graph-bayesian-methods

./: .gitignore  pyproject.toml
docs/: extensions.md
gabp/: TODO.md  __init__.py  gabp.py  gaussian.py
notebooks/: 01-explore-gmrf.ipynb  02-demirel_factor_graph.ipynb  03-drift_detetction_algos.ipynb  04-fgft.ipynb
personal-docs/: extensions.md  project-plan.md
