[project]
name = "di-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "scipy-stubs~=1.17.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "numpy>=2.4.6",
    "pygsp>=0.6.1",
    "pyright>=1.1.411",
    "scipy>=1.17.1",
]
